--- a/index.html
+++ b/index.html
@@ -20,38 +20,46 @@
       color: hsl(228, 45%, 44%);
     }
   </style>
+  <link rel="stylesheet" href="style/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="">
+  <div class="container">
+    <div class="row">
+      <div class="intro-card">
+        <h1 class="intro-heading">Learn to code by watching others</h1>
+
+        <p class="intro-content">
+          See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+          but understanding how developers think is invaluable.
+        </p>
+      </div>
+
+      <div class="signup-card">
 
 
-    <h1>Learn to code by watching others</h1>
+        <button name="button">Try it free 7 days then $20/mo. thereafter</button>
+        <div class="">
+          <form class="" action="index.html" method="post">
+            <input type="text" name="fName" value="" placeholder="First Name" required><br>
+            <input type="text" name="lName" value="" placeholder="Last Name" required><br>
+            <input type="email" name="eMail" value="" placeholder="Email Address" required><br>
+            <input type="password" name="pswd" value="" placeholder="Password" required><br>
 
-    <p>
-      See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-      but understanding how developers think is invaluable.
-    </p>
-  </div>
-
-  <div class="">
-
-
-    <button name="button">Try it free 7 days then $20/mo. thereafter</button>
-    <div class="">
-      <form class="" action="index.html" method="post">
-        <input type="text" name="fName" value="" placeholder="First Name" required><br>
-        <input type="text" name="lName" value="" placeholder="Last Name" required><br>
-        <input type="email" name="eMail" value="" placeholder="Email Address" required><br>
-        <input type="password" name="pswd" value="" placeholder="Password" required><br>
-
-        <button type="submit" name="button">Claim your free trial</button>
-      </form>
+            <button type="submit" name="button">Claim your free trial</button>
+          </form>
 
 
-      <p>By clicking the button, you are agreeing to our Terms and Services</p>
+          <p>By clicking the button, you are agreeing to our Terms and Services</p>
+        </div>
+      </div>
     </div>
+
   </div>
+
 
   <footer>
     <p class="attribution">
