--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <body>
   <div class="container">
     <div class="row">
+
       <div class="intro-card">
         <h1 class="intro-heading">Learn to code by watching others</h1>
 
@@ -38,22 +39,23 @@
         </p>
       </div>
 
+
       <div class="signup-card">
 
+        <button class="promo-button" name="button">Try it free 7 days <span class="dim-text">then $20/mo. thereafter</span> </button>
 
-        <button name="button">Try it free 7 days then $20/mo. thereafter</button>
         <div class="">
-          <form class="" action="index.html" method="post">
-            <input type="text" name="fName" value="" placeholder="First Name" required><br>
-            <input type="text" name="lName" value="" placeholder="Last Name" required><br>
-            <input type="email" name="eMail" value="" placeholder="Email Address" required><br>
-            <input type="password" name="pswd" value="" placeholder="Password" required><br>
+          <form class="signup-form" action="index.html" method="post">
+            <input class="input-box" type="text" name="fName" value="" placeholder="First Name" required><br>
+            <input class="input-box" type="text" name="lName" value="" placeholder="Last Name" required><br>
+            <input class="input-box" type="email" name="eMail" value="" placeholder="Email Address" required><br>
+            <input class="input-box" type="password" name="pswd" value="" placeholder="Password" required><br>
 
-            <button type="submit" name="button">Claim your free trial</button>
+            <button class="claim-button" type="submit" name="button">CLAIM YOUR FREE TRAIL</button>
+
+            <p class="terms">By clicking the button, you are agreeing to our <span style="color:Red">Terms and Services</span></p>
           </form>
 
-
-          <p>By clicking the button, you are agreeing to our Terms and Services</p>
         </div>
       </div>
     </div>
