--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="">
           <form class="signup-form" action="index.html" method="post">
-            <input class="input-box" type="text" name="fName" value="" placeholder="First Name" required><br>
+            <input class="input-box" type="text" name="fName" value="" placeholder="First Name" autocomplete="off" required><br>
             <input class="input-box" type="text" name="lName" value="" placeholder="Last Name" required><br>
             <input class="input-box" type="email" name="eMail" value="" placeholder="Email Address" required><br>
             <input class="input-box" type="password" name="pswd" value="" placeholder="Password" required><br>
@@ -66,7 +66,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Naveen Ongole</a>.
     </p>
   </footer>
 </body>
