--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="">
           <form class="signup-form" action="index.html" method="post" novalidate>
-            <input class="input-box" type="text" name="fName" value="" placeholder="First Name" autocomplete="off" required><br>
+            <input src=""class="input-box" type="text" name="fName" value="" placeholder="First Name" autocomplete="off" required><br>
             <span class = "error-fname"></span>
             <input class="input-box" type="text" name="lName" value="" placeholder="Last Name" required><br>
             <span class = "error-lname"></span>
